[package]
name = "chip8"
version = "0.1.0"
authors = ["Chris Smith <crsmithdev@gmail.com>"]

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
rand = "0.3"
sdl2-sys = "0.31"
libc = "0.2"
lazy_static = "1.0"
chan = "0.1.19"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf"]
