[package]
name = "chip8"
version = "0.1.0"
authors = ["Chris Smith <crsmithdev@gmail.com>"]

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
rand = "0.6.5"
sdl2-sys = "0.32.6"
libc = "0.2"
lazy_static = "1.3.0"
chan = "0.1.23"
crossbeam-channel = "0.3"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
#features = ["ttf", "unsafe_textures"]
features = ["ttf"]
