[package]
name = "chip8"
version = "0.1.0"
authors = ["Chris Smith <crsmithdev@gmail.com>"]

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
lazy_static = "1.3.0"
libc = "0.2"
log = "0.4"
rand = "0.6.5"
sdl2-sys = "0.32.6"
nfd = "0.0.4"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["ttf", "gfx"]
